--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -40,7 +40,6 @@ body {
 }
 
 .infrastructure,
-.life,
 .footer {
   content-visibility: auto;
   contain-intrinsic-size: 800px;
